--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap");
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: rgb(207, 207, 207);
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  height: 72px;
+}
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.logo {
+  width: 90px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  gap: 24px;
+  cursor: pointer;
+}
+
+.main-text {
+  font-weight: 700;
+  font-size: 90px;
+  line-height: 102px;
+  margin-top: 10px;
+}
+
+.para-text {
+  font-size: 15px;
+  max-width: 400px;
+}
+
+.special-text {
+  color: red;
+}
+.btn {
+  margin-top: 10px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
   text-align: center;
+  align-items: center;
+  height: 32px;
+  color: white;
+  background-color: rgb(119, 0, 255);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 550;
+  font-size: 17px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn:hover {
+  box-shadow: 0px 0px 5px rgb(43, 0, 92);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.icon-1 {
+  margin: 0 10px;
+  width: 80px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero {
+  display: flex;
+  height: calc(100vh - 72px);
+  width: 100vw;
+}
+
+.hero-button {
+  display: flex;
+  gap: 10px;
+}
+
+.hero-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  gap: -20px;
 }
